--- a/css/style.css
+++ b/css/style.css
@@ -33,19 +33,49 @@ a:focus {
   text-decoration: none;
 }
 
-.btn.btn-custom {
-  padding: 12px 20px;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 500;
-  color: #777777;
-  border-radius: 0;
-  border: 2px solid #549ad4;
-  box-shadow: inset 0 0 0 0 #549ad4;
-  transition: ease-out 0.3s;
-  -webkit-transition: ease-out 0.3s;
-  -moz-transition: ease-out 0.3s;
-}
+.btn.btn-custom{
+  padding: 15px 25px;
+  border: 1px solid #549ad4;
+  border-radius: 15px;
+  color:white;
+  font-weight: 600;
+  z-index: 1;
+  background: transparent;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  -webkit-transition:all 250ms ;
+  -moz-transition:all 250ms ;
+  overflow: hidden;
+ }
+ 
+ .btn.btn-custom::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color:#549ad4;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  -webkit-transition:all 250ms ;
+  -moz-transition:all 250ms ;
+ }
+ 
+ .btn.btn-custom:hover {
+  color: #e8e8e8;
+ }
+ 
+ .btn.btn-custom:hover::before {
+  width: 100%;
+ }
 .logoimg {
   width: 75px;
   /* border-radius: 50px; */
@@ -55,10 +85,7 @@ a:focus {
   justify-content: center;
   /* margin-left: 250px; */
 }
-.btn.btn-custom:hover {
-  color: #20212b;
-  box-shadow: inset 0 0 0 30px #549ad4;
-}
+
 
 .btn:focus,
 .form-control:focus {
