--- a/css/style.css
+++ b/css/style.css
@@ -1435,6 +1435,35 @@ a:focus {
   margin: 0;
 }
 
+/*changes*/
+.extra1{                                                                             /*changes*/
+  display: none;
+}
+.extra1:has(~input[type="checkbox"]:checked){
+  display:inline;
+}
+details {
+  /* width: 600px;  */
+  cursor: pointer;
+}
+
+summary {
+  font-weight: bold;
+  padding: 10px;
+  /* background-color: #007BFF; */
+  color: grey;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+#hidden_text {
+  margin: 0;
+  padding: 10px;
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
 .event .btn.btn-custom {
   margin-top: 20px;
   padding: 8px 30px;
